@@ -5,7 +5,9 @@ import com.github.javaparser.ParserConfiguration;
 import com.github.javaparser.StaticJavaParser;
 import com.github.javaparser.ast.CompilationUnit;
 import com.github.javaparser.ast.PackageDeclaration;
-import com.github.javaparser.ast.body.*;
+import com.github.javaparser.ast.body.BodyDeclaration;
+import com.github.javaparser.ast.body.ClassOrInterfaceDeclaration;
+import com.github.javaparser.ast.body.TypeDeclaration;
 import com.github.javaparser.utils.SourceRoot;
 import io.reactivex.rxjava3.core.Maybe;
 import io.reactivex.rxjava3.core.Observable;
@@ -41,6 +43,7 @@ public class ReactiveAnalyzerImpl implements ReactiveAnalyzer {
         return Observable.<PackageDeclaration>create(emitter -> {
                     SourceRoot sourceRoot = new SourceRoot(Paths.get(srcProjectFolderName)).setParserConfiguration(new ParserConfiguration());
                     List<ParseResult<CompilationUnit>> parseResultList = sourceRoot.tryToParseParallelized();
+
                     List<PackageDeclaration> allCus = parseResultList.stream()
                             .filter(r -> r.getResult().isPresent() && r.isSuccessful())
                             .map(r -> r.getResult().get())
@@ -60,13 +63,15 @@ public class ReactiveAnalyzerImpl implements ReactiveAnalyzer {
                             List<CompilationUnit> classesOrInterfacesUnit = this.createParsedFileList(packageDeclaration, sourceRootPath)
                                     .stream()
                                     .filter(r -> r.isSuccessful() && r.getResult().isPresent())
-                                    .map(r -> r.getResult().get()).toList();
+                                    .map(r -> r.getResult().get()).collect(Collectors.toList());
+
                             incrementPackageNumber(1);
                             for (CompilationUnit cu : classesOrInterfacesUnit) {
                                 List<ClassOrInterfaceDeclaration> declarationList = cu.getTypes().stream()
                                         .map(TypeDeclaration::asTypeDeclaration)
                                         .filter(BodyDeclaration::isClassOrInterfaceDeclaration)
-                                        .map(x -> (ClassOrInterfaceDeclaration) x).toList();
+                                        .map(x -> (ClassOrInterfaceDeclaration) x).collect(Collectors.toList());
+
                                 for (ClassOrInterfaceDeclaration declaration : declarationList) {
                                     if (isTheRightPackage(packageDeclaration.getNameAsString(), declaration)) {
                                         if (declaration.isInterface()) {
